# maranode

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Development.md  Dockerfile  Dockerfile.gpu  Dockerfile.openvino  Dockerfile.rocm  HANDBOOK.md  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  docker-compose.yml
.cargo/: config.toml
.config/maranode/: config.toml
.github/workflows/: ci.yml  release.yml  update-apt-repo.yml  update-homebrew.yml
baselines/: registry.json
crates/maranode-api/: Cargo.toml
crates/maranode-api/src/: changemgmt.rs  error.rs  forensic.rs  hold_recovery.rs  incident.rs  legal_hold.rs  lib.rs  openai.rs  rag_embedder.rs  runtime.rs  state.rs  tee_encrypt.rs  user_ctx.rs  workspace_ctx.rs
crates/maranode-api/src/dlp/: forcepoint.rs  mod.rs  purview.rs  symantec.rs
crates/maranode-api/src/routes/: attestation.rs  audit.rs  baseline.rs  chat.rs  classification.rs  dlp.rs  embeddings.rs  health.rs  hold.rs  identity.rs  incident.rs  metrics.rs  mod.rs  models.rs  rag.rs  registry.rs  reset.rs  stats.rs  ui.rs  users.rs  workspaces.rs
crates/maranode-api/src/ui/: index.html
crates/maranode-attestation/: Cargo.toml
crates/maranode-attestation/src/: binary.rs  lib.rs  pcr_policy.rs  perf.rs  report.rs  rotation.rs  seal.rs  tee.rs  tpm.rs
crates/maranode-audit/: Cargo.toml
crates/maranode-audit/src/: bundle.rs  chain.rs  export.rs  key.rs  lib.rs  log.rs  retention.rs  rotate.rs  sign.rs  verify.rs
crates/maranode-audit/tests/: rotation.rs
crates/maranode-bench/: Cargo.toml
crates/maranode-bench/src/: main.rs
crates/maranode-cli/: Cargo.toml
crates/maranode-cli/src/: errors.rs  main.rs
crates/maranode-cli/src/commands/: admin.rs  audit.rs  baseline.rs  chat.rs  dlp.rs  hold.rs  incident.rs  mod.rs  model.rs  quant.rs  rag.rs  registry.rs  scan.rs  serve.rs  status.rs  symbols.rs  tpm.rs  users.rs  verify.rs  workspace.rs
crates/maranode-common/: Cargo.toml
crates/maranode-common/src/: approval.rs  baseline.rs  classification.rs  error.rs  events.rs  gguf.rs  hold.rs  incident.rs  lib.rs  models.rs  paths.rs  receipt.rs  secure.rs  types.rs  user.rs  workspace.rs
crates/maranode-daemon/: Cargo.toml
crates/maranode-daemon/src/: admin.rs  baseline_check.rs  config.rs  lifecycle.rs  main.rs  probe.rs  reload.rs  shutdown.rs  tls_serve.rs  unix_serve.rs
crates/maranode-inference/: Cargo.toml  build.rs
crates/maranode-inference/src/: engine.rs  lib.rs  llama.rs  queue.rs  stub.rs  types.rs
crates/maranode-isolation/: Cargo.toml
crates/maranode-isolation/src/: iptables.rs  lib.rs  netns.rs  probe.rs  state.rs
crates/maranode-rag/: Cargo.toml
crates/maranode-rag/src/: chunk.rs  codescan.rs  config.rs  crypt.rs  embed.rs  engine.rs  extract.rs  lib.rs  math.rs  store.rs  symbols.rs
crates/maranode-rag/src/sql/: migrate.sql
crates/maranode-store/: Cargo.toml
crates/maranode-store/src/: blob.rs  bootstrap.rs  db.rs  defaults.rs  download.rs  kek.rs  lib.rs  store.rs  user_db.rs  workspace_db.rs
crates/maranode-store/src/sql/: migrate.sql  migrate_add_context_length.sql  migrate_add_dek.sql  migrate_add_model_type.sql  migrate_users.sql  migrate_workspaces.sql
crates/maranode-verifier/: Cargo.toml
crates/maranode-verifier/src/: main.rs
demos/proof-test/: README.md  _lib.sh  demo.sh  run-inference.sh  sign-receipt.sh  verify-receipt.sh
docker/: entrypoint.sh
docs/: compliance.md  config.toml.example  docker.md  document-intelligence.md  erasure.md  grounding.md  install.md  receipt.md  reproducible-inference.md  system_prompt.example.txt  threat-model.md  usage.md  users.md  verification.md  workspaces.md
packaging/arch/: PKGBUILD  maranode.install
packaging/debian/: control  maranoded.service  postinst  prerm
packaging/homebrew/: maranode.rb
packaging/rpm/: maranode.spec
packaging/systemd/: maranoded-setup.sh  maranoded.service
scripts/: build-bench.sh  build-cuda.sh  build-docker.sh  build-metal.sh  build-openvino.sh  build-release.sh  build-rocm.sh  build-vulkan.sh  install.sh
siem/detection/: field-schema.md  qradar_aql.aql  sentinel_kql.kql  splunk_detections.spl
siem/elastic/: filebeat.yml  index-template.json  ingest-pipeline.json
siem/splunk/maranode/default/: app.conf  props.conf  savedsearches.conf  transforms.conf
tests/: Cargo.toml
tests/e2e/: api_test.rs
tests/integration/: api_router_test.rs  audit_chain_test.rs  classification_tests.rs  device_selection_test.rs  drift_test.rs  inference_test.rs  rag_test.rs  repro_ci_test.rs  shred_test.rs  store_security_test.rs  store_test.rs  tpm_tests.rs
ui/: index.html
ui/assets/: app.js  style.css
