[workspace]
resolver = "2"
members = [
    "crates/maranode-common",
    "crates/maranode-audit",
    "crates/maranode-attestation",
    "crates/maranode-isolation",
    "crates/maranode-store",
    "crates/maranode-inference",
    "crates/maranode-rag",
    "crates/maranode-api",
    "crates/maranode-daemon",
    "crates/maranode-cli",
    "crates/maranode-bench",
    "tests",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["ondercsn <ondercsn@users.noreply.github.com>"]
license      = "Apache-2.0"
repository   = "https://github.com/maranode/maranode"
homepage     = "https://maranode.com"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }

# HTTP
axum         = { version = "0.7", features = ["json", "ws", "multipart"] }
tower        = { version = "0.4" }
tower-http   = { version = "0.5", features = ["trace", "cors"] }
hyper        = { version = "1" }

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# Database
rusqlite     = { version = "0.31", features = ["bundled"] }

# Crypto / HMAC
hmac         = "0.12"
sha2         = "0.10"
hex          = "0.4"
subtle       = "2"

# CLI
clap         = { version = "4", features = ["derive", "env"] }
indicatif    = { version = "0.17", features = ["tokio"] }
colored      = "2"
rpassword    = "7"

# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow   = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
time   = { version = "0.3", features = ["serde"] }

# Misc
uuid       = { version = "1", features = ["v4", "serde"] }
once_cell  = "1"
bytes      = "1"
rand       = "0.8"
zip        = { version = "2", default-features = false, features = ["deflate"] }
argon2     = "0.5"
openidconnect = "3"
oauth2     = "4"
ldap3      = { version = "0.11", default-features = false, features = ["tls-rustls"] }
rsa        = { version = "0.9", features = ["sha2"] }
x509-cert  = "0.2"
base64     = "0.22"
flate2     = "1"
quick-xml  = { version = "0.36", features = ["serialize"] }
urlencoding = "2"
url        = "2"
rust-embed = { version = "8", features = ["mime-guess"] }

# Test utilities (used by the `tests` workspace member)
tempfile        = "3"
http-body-util  = "0.1"

# Internal crates
maranode-common    = { path = "crates/maranode-common" }
maranode-audit        = { path = "crates/maranode-audit" }
maranode-attestation  = { path = "crates/maranode-attestation" }
maranode-isolation    = { path = "crates/maranode-isolation" }
maranode-store     = { path = "crates/maranode-store" }
maranode-inference = { path = "crates/maranode-inference" }
maranode-rag       = { path = "crates/maranode-rag" }
maranode-api       = { path = "crates/maranode-api" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
