[package]
name        = "maranode-api"
description = "OpenAI-compatible HTTP API layer for Maranode (Axum)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[features]
ldap = ["dep:ldap3"]

[dependencies]
maranode-common       = { workspace = true }
maranode-audit        = { workspace = true }
maranode-attestation  = { workspace = true }
maranode-isolation    = { workspace = true }
maranode-store     = { workspace = true }
maranode-inference = { workspace = true }
maranode-rag       = { workspace = true }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
bytes        = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
async-trait   = "0.1"
argon2        = { workspace = true }
openidconnect = { workspace = true }
oauth2        = { workspace = true }
ldap3         = { workspace = true, optional = true }
base64        = { workspace = true }
flate2        = { workspace = true }
quick-xml     = { workspace = true }
urlencoding   = { workspace = true }
url           = { workspace = true }
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed   = { workspace = true }
mime_guess   = "2"
