[package]
name        = "maranode-attestation"
description = "Runtime integrity attestation: binary measurement and TPM PCR reporting"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
hmac         = { workspace = true }
hex          = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
aes-gcm      = { workspace = true }
tracing      = { workspace = true }
tempfile     = { workspace = true }
maranode-common = { workspace = true }
maranode-audit  = { workspace = true }
