[package]
name        = "maranode-audit"
description = "Append-only HMAC-chained audit log for Maranode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
maranode-common = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
hmac          = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
chrono        = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
rand          = { workspace = true }
zip           = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
