[package]
name        = "maranode-common"
description = "Shared types, errors, and events for the Maranode runtime"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
anyhow       = { workspace = true }
subtle       = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
