[package]
name        = "maranode-rag"
description = "Optional, fully-local retrieval-augmented generation for Maranode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
maranode-common = { workspace = true }

rusqlite    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
async-trait = "0.1"
pdf-extract = "0.7"
lopdf       = "0.34"
tempfile    = { workspace = true }
