[package]
name        = "maranode-store"
description = "Content-addressed model store for Maranode"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
maranode-common = { workspace = true }
rusqlite      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
bytes         = { workspace = true }
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util  = "0.3"
argon2        = { workspace = true }
